--- a/iReSign/iReSign/en.lproj/MainMenu.xib
+++ b/iReSign/iReSign/en.lproj/MainMenu.xib
@@ -208,7 +208,7 @@
                     <button id="574">
                         <rect key="frame" x="337" y="122" width="108" height="18"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                        <buttonCell key="cell" type="check" title="Change ID" bezelStyle="regularSquare" imagePosition="left" inset="2" id="575">
+                        <buttonCell key="cell" type="check" title="Change ID" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="575">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
